# csaf-2.0-to-csaf-2.1

./: .gitignore  README.md  converter-testcases-20-21.json  converter_replacement.py  csaf-converter-testcases-schema.json  csaf-converter-testcases-schema.json.license  prototype_modifier.py  prototype_runtests.py  pyproject.toml
.github/workflows/: python-tests.yml
input/: isduba-2026-001.json  testcase-1-20260311-1512-isduba-2026-001.json  testcase-10-isduba-2026-001.json  testcase-11-isduba-2026-001.json  testcase-12-isduba-2026-001.json  testcase-13-isduba-2026-001.json  testcase-14-isduba-2026-001.json  testcase-15-a-1-isduba-2026-001.json  testcase-15-a-isduba-2026-001.json  testcase-15-b-1-isduba-2026-001.json  testcase-15-b-isduba-2026-001.json  testcase-15-c-1-isduba-2026-001.json  testcase-15-c-isduba-2026-001.json  testcase-16-isduba-2026-001.json  testcase-17-isduba-2026-001.json  testcase-18-isduba-2026-001.json  testcase-19-a-isduba-2026-001.json  testcase-19-b-isduba-2026-001.json  testcase-2-20260312-1651-isduba-2025-01.json  testcase-20-isduba-2026-001.json  testcase-20260310-1501-isduba-2026-001.json  testcase-21-isduba-2026-001.json  testcase-22-isduba-2026-001.json  testcase-22-isduba-2026-001.json.license  testcase-23-isduba-2026-001.json  testcase-3-20260313-1429-isduba-2026-001.json  testcase-4-2-20260323-1146-isduba-2025-01.json  testcase-4-20260323-1146-isduba-2025-01.json  testcase-5-isduba-2026-001.json  testcase-6-isduba-2026-001.json  testcase-7-isduba-2026-001.json  testcase-8-isduba-2026-001.json  testcase-9-isduba-2026-001.json
